--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jav-database",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://javdatabase.github.io/web-app",
+  "homepage": "https://javdatabase.github.io/web-app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -12,6 +12,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
