--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "element-resize-event": "^3.0.3",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
