--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jav-database",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://www.javdatabase.com/",
+  "homepage": "https://www.javdatabase.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
