--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "element-resize-event": "^3.0.3",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "react": "^16.13.1",
