--- a/package.json
+++ b/package.json
@@ -3,22 +3,6 @@
   "version": "0.2.0",
   "private": true,
   "homepage": "https://www.javdatabase.com/",
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "element-resize-event": "^3.0.3",
-    "js-cookie": "^2.2.1",
-    "lodash": "^4.17.20",
-    "moment": "^2.29.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-lazyload": "^2.6.5",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-select": "^3.0.8",
-    "styled-components": "^5.0.1"
-  },
   "scripts": {
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
@@ -29,6 +13,25 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.1.9",
+    "element-resize-event": "^3.0.6",
+    "js-cookie": "^2.2.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "react-select": "^4.3.1",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   },
   "browserslist": {
     "production": [
@@ -41,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
