--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jav-database",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "homepage": "https://www.javdatabase.com/",
   "scripts": {
@@ -12,12 +12,15 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.1.9",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "element-resize-event": "^3.0.6",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
@@ -28,7 +31,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-select": "^4.3.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
