--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
-  },
+  "devDependencies": {},
   "browserslist": {
     "production": [
       ">0.2%",
