--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "jav-database",
-  "version": "0.5.0",
+  "name": "jav-database-web-app",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "https://www.javdatabase.com/",
+  "homepage": "https://www.jav-database.com/",
   "scripts": {
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
