--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "element-resize-event": "^3.0.6",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
