--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-lazyload": "^3.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-select": "^4.3.1",
+    "react-virtualized": "^9.22.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
